@@ -1,3 +1,9 @@
+2002-05-31  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Deliver/Connection.pm (getline): Explicitly check for
+	error conditions on the SMTP output filehandle and complain if
+	found.
+	
 2002-05-29  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwadm:  Add support for the register command.
